--- a/public/index.html
+++ b/public/index.html
@@ -41,5 +41,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1002412582185134"
+     crossorigin="anonymous"></script>
   </body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1002412582185134"
+     crossorigin="anonymous"></script>
 </html>
